[package]
name = "CheatScan"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.17.2"
glow = "0.14.2"
glutin = "0.32.3"
glutin-winit = "0.5.0"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
winit = "0.30.13"
walkdir = "2.5.0"
rayon = "1.12.0"
pelite = "0.10.0"
sha2 = "0.11.0"
hex = "0.4.3"
